AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = 	bitcoinminer.py \
		bitcoinmonitor.py \
		malware.py malware.rb \
		mostusedips.py \
		nids_firewall.py \
		troyan.py \
		redis_adaptor.py redis_adaptor.rb \
		cassandra_adaptor.py \
		hadoop_adaptor.py \
		heartbeat.py heartbeat.rb \
		unknown.py \
		tor.py \
		netfilter.py \
		parallel.py \
		snort.py \
		query.py \
		uri_exploit.py \
		zeus_malware.py zeus_malware.lua \
		ddos.py ddos.rb ddos.lua \
		file_adaptor.rb file_adaptor.lua \
		spam.rb 

MAINTAINERCLEANFILES = Makefile.in 
