AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = 	4udppackets.pcap sslflow.pcap \
		accessgoogle.pcap mpls_icmp.pcap \
		flow_vlan_x11.pcap flow_vlan_netbios.pcap \
		two_http_flows.pcap ipv6_tcp_stream.pcap \
		generic_exploit_ipv6_defcon20.pcap \
		polymorphic_clet32bits_port1986.pcap \
		two_http_flows_noending.pcap \
		tor_4flows.pcap gprs_icmp.pcap \
		amazon_4ssl_flows.pcap \
		ipv6_google_dns.pcap ipv6_ah.pcap \
		icq.pcapng vxlan_ftp.pcap gre_ssh.pcap \
		openflow.pcap \
		smtp.pcap ssdp_flow.pcap

MAINTAINERCLEANFILES = Makefile.in 

