AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = 	tests_packets.h README.txt \
		mpls_test_packets.h torrent_test_packets.h dns_test_packets.h ipv6_test_packets.h \
		ip_frag_test_packets.h gprs_packets.h virtual_packets.h openflow_packets.h \
		smtp_test_packets.h imap_test_packets.h pop_test_packets.h snmp_test_packets.h \
		full_ssl_packets.h modbus_test_packets.h bitcoin_test_packets.h 

MAINTAINERCLEANFILES = Makefile.in 

